--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-elements": "^1.2.7",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.0.0-alpha.11",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
